# edp2mqtt

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
edp2mqtt/: main.py  parser.py  pcap2txt.py  structures.py
tests/: test_structures.py
