[tool.poetry]
name = "edp2mqtt"
version = "0.1.0"
description = "Recieves EDP (Extended Datagram Protocol) and forwards to MQTT"
authors = ["partial404"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^2.1.0"
dpkt = "^1.9.8"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
